--- a/src/pages/entries/[...slug].astro
+++ b/src/pages/entries/[...slug].astro
@@ -65,6 +65,7 @@ const threadMessages = threadId
     <SourceCitation
       sourceUrl={entry.data.sourceUrl}
       secondarySources={entry.data.secondarySources}
+      pdfMetadata={entry.data.pdfMetadata}
       lang={lang}
     />
 
