--- a/src/pages/entries/[...slug].astro
+++ b/src/pages/entries/[...slug].astro
@@ -47,6 +47,7 @@ const threadMessages = threadId
         isSatoshi={entry.data.isSatoshi}
         lang={lang}
         participants={entry.data.participants}
+        tags={entry.data.tags}
       />
     </header>
 
