--- a/src/pages/ja/entries/[...slug].astro
+++ b/src/pages/ja/entries/[...slug].astro
@@ -42,6 +42,7 @@ const next = currentIndex < sorted.length - 1 ? sorted[currentIndex + 1] : null;
         isSatoshi={entry.data.isSatoshi}
         lang={lang}
         participants={entry.data.participants}
+        tags={entry.data.tags}
       />
     </header>
 
